# sfml-test

./: CMakeLists.txt  README.md  novnc.sh  run.sh  todo.txt
.devcontainer/: Dockerfile  devcontainer.json
include/: Animator.hpp  Game.hpp  Game.tpp  GameManager.hpp  GameManager.tpp  Motion.hpp  Scene.hpp  Scene.tpp  Sprite.hpp  WindowManager.hpp  aliases.hpp
include/Entities/: Animator.hpp  Collision.hpp  Collision.tpp  Collsion.tpp  Entity.hpp  Entity.tpp  Modules.hpp  Motion.hpp  Motion.tpp  Sprite.hpp
include/Entities/Animator/: Animator.hpp
include/Entities/Collision/: Collision.hpp  Collision.tpp
include/Entities/Entity/: Entity.hpp
include/Entities/Initialisable/: Initialisable.hpp
include/Entities/Listener/: Listener.hpp  is_listener.hpp
include/Entities/Listener/listeners/: ClickListener.hpp  HoverListener.hpp
include/Entities/Motion/: Motion.hpp
include/Entities/Sprite/: Sprite.hpp
include/Entities/Updatable/: Updatable.hpp
include/GameManager/: GameManager.hpp  GameManager.tpp
include/Modules/Animator/: Animator.hpp
include/Modules/Collision/: Collision.hpp  Collision.tpp
include/Modules/Entity/: Entity.hpp
include/Modules/Motion/: Motion.hpp  Motion.tpp
include/Scene/: Scene.hpp  Scene.tpp
include/Scene/EntityStorage/: EntityDetails.hpp  EntityStore.hpp  EntityStore.tpp
include/Sprite/: Sprite.hpp
include/UI/: Button.hpp
include/utility/: Dictionary.hpp  EntityModule.hpp  FrameRateDetails.hpp  WindowDetails.hpp  maths.hpp
lib/: Animator.cpp  Game.cpp  GameManager.cpp  Motion.cpp  Scene.cpp  Sprite.cpp  WindowManager.cpp
lib/Entities/: Animator.cpp  Sprite.cpp
lib/GameManager/: GameManager.cpp
lib/Modules/: Sprite.cpp
lib/UI/: Button.cpp
lib/utility/: maths.cpp
src/: Player.cpp  Player.hpp  main.cpp
src/modules/: Animation.hpp  Animator.hpp  Game.hpp  Sprite.hpp
src/modules/Animator/: Animator.cpp
src/modules/Game/: Game.cpp  Game.hpp
src/modules/Motion/: Motion.cpp  Motion.hpp
src/modules/Sprite/: Sprite.cpp  Sprite.hpp
src/modules/source/: Animator.cpp  Game.cpp  Sprite.cpp
src/modules/utility/FrameRateDetails/: FrameRateDetails.hpp
src/modules/utility/maths/: maths.cpp
test/: BowlGame.cpp  BowlGame.h  BowlGame.hpp  Player.cpp  Player.hpp  Scene1.cpp  Scene1.hpp
test/scenes/Scene1/: Scene1.cpp  Scene1.hpp
test/scenes/Scene1/sprites/: Player.cpp  Player.hpp
test/scenes/Scene2/: Scene2.cpp  Scene2.hpp
test/sprites/: Player.cpp  Player.hpp  StartButton.cpp  StartButton.hpp
